# AgentActum

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development-roadmap.md  product-spec.md  release-checklist.md  security-invariants.md
src/agentactum/: __init__.py  _model.py  enums.py  facade.py  langgraph.py
src/agentactum/approvals/: __init__.py  models.py
src/agentactum/compensation/: __init__.py  coordinator.py  models.py
src/agentactum/contracts/: __init__.py  models.py  registry.py
src/agentactum/execution/: __init__.py  models.py  runtime.py
src/agentactum/idempotency/: __init__.py  backend.py  keys.py  models.py
src/agentactum/ledger/: __init__.py  backend.py  models.py
src/agentactum/outbox/: __init__.py  backend.py  models.py
src/agentactum/policies/: __init__.py  engine.py  models.py
src/agentactum/transactions/: __init__.py  models.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_compensation_coordinator.py  test_enums_and_contracts.py  test_facade.py  test_idempotency.py  test_langgraph_adapter.py  test_outbox.py  test_package.py  test_policy_and_approval_models.py  test_policy_engine.py  test_result_models.py  test_single_action_runtime.py  test_tool_registry.py  test_transaction_and_ledger_models.py
